--- a/src/pages/dashboard/displayTransactions/modal/modal.css
+++ b/src/pages/dashboard/displayTransactions/modal/modal.css
@@ -1,16 +1,18 @@
 /* The Modal (background) */
 .modal {
     position: fixed;
+    /* opacity: 0; */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
     display: block;
+    transition: opacity .05s ease-in-out;
 }
 
 .modal-main {
-    position: fixed;
+    position: relative;
     background: white;
     width: 40%;
     height: 40%;
@@ -19,6 +21,7 @@
     transform: translate(-50%, -50%);
     border-radius: 5px;
     padding: 20px;
+    transition: all 5s ease-in-out;
 }
 
 .display-block {
